# esp32-modbus-tcp-bridge

./: .gitignore  CMakeLists.txt  GITHUB_PUBLISH.md  README.md  README_TERMINAL.md  partitions_16mb_ota.csv  partitions_2mb_ota.csv  sdkconfig
docs/openspec/: design.md  proposal.md  tasks.md
docs/openspec/specs/: functional.md  huawei_inverter_registers_full.md  huawei_registers.md  huawei_wallbox_registers.md  huawei_write_registers.md  modbus_python_example.md  sdongle.md  ta_regler_setup.md
docs/openspec/specs/modbus-bridge/: spec.md
src/: CMakeLists.txt  bootstrap.bundle.min.js  bootstrap.min.css  config.h  main.c  modbus_client.c  modbus_client.h  modbus_server.c  modbus_server.h  network.c  network.h  reg_cache.c  reg_cache.h  register_catalog.json  status_log.c  status_log.h  ui.html
tests/: mock_huawei_server.py  probe_huawei_modbus.py  validate_multi_client.py
